[package]
name = "image_cluster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image_utils = { path = "../image_utils" }
k-means = { path = "../k-means" }

clap = { version = "3.1.8", features = ["derive"] }
image = "0.24.1"